--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,12 +34,15 @@
           <button id="create-room">create room</button>
           <div class="set-password">
             <input type="text" class="input-password">
+            <button id="send-password-to-server">set</button>
           </div>
         </div>
       </div>
     </div>
 
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="/stylesheets/animation.js"></script>
 </body>
 
 </html>
